ADH-8026: fix(kyuubi-jdbc): added impala scheme.